--- a/index.Rmd
+++ b/index.Rmd
@@ -202,8 +202,9 @@ Caclulating out of sample eror
 ```{r out_of_sample_error}
 # The classe variable was not provided as a part of the testing data set supplied
 # for this assignment, but it was recommended to use classe variable to predict on.
-# The principle of calculating out of sample error would be the same, but with
-# testing data set (if classe variable was provied). I used my_training data set.
+# The principle of calculating out of sample error would be the same as calculating 
+# in sample error, but with testing data set (if classe variable was provied). 
+# I used my_training data set to caclulate in sample error.
 # I expect out of sample error to be slightly larger by a percent or two.
 error_rate = sum((my_testing$classe != rfPredicted) / length(rfPredicted))
 print(paste0("The out of sample error rate is: ", error_rate))
