--- a/index.Rmd
+++ b/index.Rmd
@@ -208,5 +208,6 @@ Caclulating out of sample eror
 # I expect out of sample error to be slightly larger by a percent or two.
 error_rate = sum((my_testing$classe != rfPredicted) / length(rfPredicted))
 print(paste0("The in-sample error rate is: ", error_rate))
-print(paste0("The out of sample error rate should be grater than: ", error_rate))
+print(paste0("The out of sample error rate should be grater than: ", error_rate))  
+# The END
 ```
